# Deterministic-risk-assessment

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml  security.yml
.semgrep/: detrisk-security.yml
docs/: DATABASE_SETUP.md  SPACY_INTEGRATION.md
policy/: feeds.yaml  risk_rules.hybrid.yaml  taxonomy.yaml
policy/cicd/: workflow_hardening.rego
policy/industry-packs/: README.md  general-it.yaml  ics-ot-embedded.yaml  medical-devices.yaml
scripts/: sync_intel_feeds.py
src/utils/: build_indexes.py  feature_extractor.py  preflight_check.py  risk_chat.py  risk_engine.py  run_risk.py  run_risk_cli.py  semantic_search.py  setup_databases.py  temporal_proxy.py
src/utils/detrisk_internal/: __init__.py  temporal.py
tests/unit/: test_engine.py  test_enhanced_extraction.py  test_keyword_limitations.py  test_risk_chat.py  test_spacy_nlp.py  test_text_only.py  test_threat.py  test_threat_no_cve.py  test_utils.py  test_zero_day_fallback.py
